Fixed a bug that caused us to skip one of the albums when we were displaying the requested album for the artist first. Made album and song name display length longer. Used truncation based on the number of letters, instead of css ellipsis. This makes truncation work in Firefox, but makes the truncated names have somewhat different length...

--- a/dumbhippo/trunk/server/web/css2/artist-positions.css
+++ b/dumbhippo/trunk/server/web/css2/artist-positions.css
@@ -77,16 +77,15 @@
 }
 
 .dh-album-track .dh-song-info .dh-song-name {
-    float: left;
-    display: inline;
-    width:			180px;
-	overflow:		hidden;
-	white-space:	nowrap;
-	text-overflow:	ellipsis;
+    float:       left;
+    display:     inline;
+    width:       220px;
+	overflow:    hidden;
+	white-space: nowrap;
 }
 
 .dh-album-track .dh-song-info .dh-song-links {
-    float: right;
+    float:   right;
     display: inline;
 }
 
